[gd_scene load_steps=26 format=3 uid="uid://cayxrobcojs74"]

[ext_resource type="Script" path="res://Scripts/ground items/chest.gd" id="1_dwkwb"]
[ext_resource type="PackedScene" uid="uid://cx2fyb2kru7a8" path="res://Scenes/ground items/shadowed_animated_sprite.tscn" id="2_1sry8"]
[ext_resource type="Texture2D" uid="uid://dftmtilioeacy" path="res://Art/placeables.png" id="2_anmoq"]
[ext_resource type="Script" path="res://Scripts/tweens/tween_shake.gd" id="3_1ntn7"]
[ext_resource type="Texture2D" uid="uid://25r5c60pnjts" path="res://Art/UI/chest ui.png" id="4_5pntc"]
[ext_resource type="Script" path="res://Scripts/ui & inventory/item_container.gd" id="4_pttq6"]
[ext_resource type="Script" path="res://Scripts/ui & inventory/chest_ui.gd" id="5_dckvq"]
[ext_resource type="Script" path="res://Scripts/ui & inventory/item_container_display.gd" id="6_vtwer"]
[ext_resource type="PackedScene" uid="uid://dutjtyluty2rm" path="res://Scenes/ui & inventory/item_slot.tscn" id="8_k337s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tyxaq"]
atlas = ExtResource("2_anmoq")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_52frv"]
atlas = ExtResource("2_anmoq")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ehs3"]
atlas = ExtResource("2_anmoq")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyqo8"]
atlas = ExtResource("2_anmoq")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f02p3"]
atlas = ExtResource("2_anmoq")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e40su"]
atlas = ExtResource("2_anmoq")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gckgb"]
atlas = ExtResource("2_anmoq")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wr1kf"]
atlas = ExtResource("2_anmoq")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bg0w"]
atlas = ExtResource("2_anmoq")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0lc5"]
atlas = ExtResource("2_anmoq")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2ss4"]
atlas = ExtResource("2_anmoq")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yr6q1"]
atlas = ExtResource("2_anmoq")
region = Rect2(48, 32, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_o3k6w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyxaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52frv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ehs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyqo8")
}],
"loop": false,
"name": &"crude_chest",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f02p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e40su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gckgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wr1kf")
}],
"loop": false,
"name": &"deluxe_chest",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bg0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0lc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2ss4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yr6q1")
}],
"loop": false,
"name": &"improved_chest",
"speed": 10.0
}]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_r2gf4"]
polygon = PackedVector2Array(0, 0, 3, 0, 6, 4, 6, 7, 4, 9, 0, 9, -3, 9, -5, 7, -5, 4, -3, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxhk0"]
size = Vector2(14, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgp61"]
atlas = ExtResource("4_5pntc")
region = Rect2(0, 158, 254, 79)

[node name="Chest" type="Node2D"]
z_index = 10
z_as_relative = false
script = ExtResource("1_dwkwb")

[node name="MainAnimator" parent="." instance=ExtResource("2_1sry8")]
sprite_frames = SubResource("SpriteFrames_o3k6w")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
position = Vector2(0, -4)
occluder = SubResource("OccluderPolygon2D_r2gf4")

[node name="ShakeTween" type="Node2D" parent="."]
script = ExtResource("3_1ntn7")
x_max = 1
r_max = 5

[node name="PhysicsCollider" type="StaticBody2D" parent="."]
z_index = 10
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicsCollider"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_qxhk0")

[node name="ItemContainer" type="Node" parent="."]
script = ExtResource("4_pttq6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ChestUI" type="TextureRect" parent="CanvasLayer" node_paths=PackedStringArray("item_container")]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -84.0
offset_right = 127.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = SubResource("AtlasTexture_fgp61")
script = ExtResource("5_dckvq")
item_container = NodePath("../../ItemContainer")
chest_atlas = SubResource("AtlasTexture_fgp61")

[node name="ItemContainerDisplay" type="Control" parent="CanvasLayer/ChestUI" node_paths=PackedStringArray("parent")]
anchors_preset = 0
offset_left = 24.0
offset_top = 4.0
offset_right = 24.0
offset_bottom = 4.0
script = ExtResource("6_vtwer")
parent = NodePath("../../../ItemContainer")

[node name="Slots" type="GridContainer" parent="CanvasLayer/ChestUI/ItemContainerDisplay"]
unique_name_in_owner = true
layout_mode = 2
offset_right = 206.0
offset_bottom = 71.0
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 9

[node name="ItemSlot0" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot1" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot2" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot3" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot4" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot5" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot6" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot7" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot8" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot9" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot10" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot11" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot12" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot13" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot14" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot15" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot16" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot17" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot18" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot19" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot20" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot21" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot22" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot23" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot24" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot25" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[node name="ItemSlot26" parent="CanvasLayer/ChestUI/ItemContainerDisplay/Slots" instance=ExtResource("8_k337s")]
layout_mode = 2

[connection signal="chest_placed" from="." to="CanvasLayer/ChestUI/ItemContainerDisplay" method="_on_chest_placed"]
[connection signal="items_changed" from="ItemContainer" to="CanvasLayer/ChestUI/ItemContainerDisplay" method="on_items_changed"]
